[SONAR] Ensure public collections are immutable, or make them private